--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -6,10 +6,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #fff2f2;
+    background-color: #efeeee;
 }
 
 .nav {
@@ -34,64 +35,147 @@ body {
 }
 .nav li:not(.logo){
     cursor: pointer;
-}
-.nav li:not(.logo), .contain, input {
     margin: 0 1rem;
-    padding: 0.5rem 1.5rem;
-    border: 2px solid rgba(255, 255, 255, 0.3);
-    box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 6px white;
-    border-radius: 10px;
-    font-family: "Roboto", sans-serif;
-    transition: color 0.2s ease-out, transform 0.2s ease-out;
-    color: dimgray;
-}
-.nav li:not(.logo):hover, .contain, input:hover {
-    transform: scale(1.05);
-    box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.1), -4px -4px 10px white;
-}
-.nav li:not(.logo):focus, .contain, input:focus {
-    outline: none;
-    transform: scale(0.95);
-    box-shadow: 4px 4px 10px 0 rgba(0, 0, 0, 0.1), -4px -4px 10px white, 4px 4px 10px 0 rgba(0, 0, 0, 0.1) inset, -4px -4px 10px white inset;
 }
 
+.nav li:not(.logo), .contain, input {
+
+    padding: 0.5rem 1.5rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 6px white;
+    border-radius: 10px;
+    transition: color 0.2s ease-out, transform 0.2s ease-out;
+
+}
 
 .icons{
     width: 20px;
     height: 20px;
 }
 
-img{
-    width: 100%;
-    position: relative;
+.imgC{
+    height: 35vh;
+    position: absolute;
+    right: 200px;
+    top: 10px;
 }
 
 section{
-    height: 100vh;
+    height: 50vh;
 
     display: flex;
-    align-items: start;
-    justify-content: start;
+    align-items: center;
+    justify-content: center;
 }
 
 .contain{
-    margin-top: 50px;
-    margin-left: 7%;
     background: #efeeee;
-    width: 45%;
-    height: 60%;
+    width: 60%;
+    height: 30vh;
+    left: 150px;
     position: absolute;
-    z-index: 1;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 30px;
+    padding: 50px;
+
 }
 
-input{
-    width: 80%;
-    height: 40px;
+.divide{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
 }
+
+.insidedivide{
+    width: 60%;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+}
+
+.iconslocation{
+    height: 20px;
+    width: 20px ;
+    margin-bottom: 6px;
+}
+
+.iconslocationstart{
+    height: 15px;
+    width: 15px;
+    margin-bottom: 6px;
+}
+
+.circleunder{
+    height: 5px;
+    width: 5px;
+}
+.circles{
+    display: flex;
+    flex-direction: column;
+    width: 15px;
+    gap: 6px;
+    position: relative;
+    align-items: center;
+    margin-bottom: 8px;
+
+}
+
+
+
+
+
+
+h1{
+    font-size: 2em;
+    color: black;
+    margin-bottom: 30px;
+}
+img#car{
+    height: 20px;
+}
+
+button{
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 6px white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    width: 20%;
+    height: 45px;
+    padding: 5px;
+    text-align: center;
+    background: #82cdd6;
+}
+
+.line{
+    height: 3px;
+    background: black;
+    border-radius: 10px;
+    width: 60%;
+    display: flex;
+}
+
+.underlineTravel{
+    display: flex;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+#search input{
+    width: 100%;
+}
+
+
+.location{
+
+}
+
+
 
 
