--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -144,6 +144,7 @@ h2{
 .connectFooter{
     left: 20px;
     cursor: pointer;
+    flex-direction: row;
 }
 
 #echelleFooter{
@@ -168,7 +169,19 @@ h2{
     width: 25%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    padding: 10px;
     gap: 10%;
+}
+
+.lines{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    padding: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 6px white;
+    border-radius: 10px;
 }
 
 a{
