--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -21,6 +21,7 @@ body {
 #mapContainer{
     height: 100vh;
     width: 100%;
+    z-index: -1;
     position: fixed;
     top: 0;
     right: 0;
@@ -34,6 +35,7 @@ body {
 .icons{
     width: 15px;
     height: 15px;
+    filter: opacity(0.6);
 }
 
 .imgGlobe{
@@ -101,15 +103,39 @@ button, .registerButton, .exitButton{
     box-shadow: 4px 4px 6px 0 rgba(0, 0, 0, 0.1), -4px -4px 6px white;
     font-family: Poppins, serif;
     cursor: pointer;
+    transition: 0.5s;
 
 }
+#searchButton:hover > img{
+    transform: rotate(45deg);
+}
 
+.connectButton:hover{
+    color: #ffae9e;
+    background-color: white;
+}
+.connectHeader:hover,
+.registerButton:hover{
+    color: rgba(15, 22, 33, 0.8);
+}
+
+.connectHeader:hover > img,
+.exitButton:hover > img{
+
+    filter: opacity(1);
+
+}
 #searchButton{
     width: 20%;
     height: 100%;
     padding: 5px;
     background: #ffae9e;
     cursor: pointer;
+}
+#searchButton > img{
+    width: 15px;
+    height: 15px;
+    transition: 0.5s;
 }
 
 .registerButton{
@@ -167,6 +193,10 @@ footer{
     height: 25%;
     padding: 10px;
     font-size: 0.7em;
+    transition: 0.5s;
+}
+.addDest:hover{
+    scale: 0.98;
 }
 
 #logo{
