--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -12,11 +12,8 @@
 }
 
 body {
-    /*background-color: #efeeee;
-    background-image: url("../img/background-test.png");*/height: 100%;
+    height: 100%;
 }
-
-
 
 #mapContainer{
     height: 100vh;
@@ -38,13 +35,6 @@ body {
     filter: opacity(0.6);
 }
 
-.imgGlobe{
-    height: 25vh;
-    position: absolute;
-    left: 24%;
-
-}
-
 
 .contain{
     background: #efeeee;
@@ -59,8 +49,55 @@ body {
     padding: 20px 20px 20px 20px;
     box-shadow: 0em 0 0.4em 0 rgba(15, 22, 33, 0.6);
     border-radius: 0.5em;
+}
+
+.fond-page{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    height: 100vh;
+    backdrop-filter: blur(2px);
+    width: 100%;
 
 }
+
+.box-inscription > h1{
+    margin: 10px 0 25px 0;
+    border: 2px solid #ffae9e;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.box-inscription{
+    display: flex;
+    width: 30%;
+    height: 80%;
+    padding: 20px 30px;
+    z-index: 1;
+    position: relative;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0em 0 0.4em 0 rgba(15, 22, 33, 0.6);
+    border-radius: 0.5em;
+    background: #efeeee;
+}
+
+.box-inscription > label{
+    display: flex;
+    width: 100%;
+    height: 80%;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-bottom: 20px;
+    gap: 10px;
+    position: relative;
+}
+
+
+
+
+
 
 
 .insideDivide{
@@ -104,13 +141,13 @@ button, .registerButton, .exitButton{
     font-family: Poppins, serif;
     cursor: pointer;
     transition: 0.5s;
-
 }
+
 #searchButton:hover > img{
     transform: rotate(45deg);
 }
 
-.connectButton:hover{
+.connectButton:hover, .inscriptionButton:hover{
     color: #ffae9e;
     background-color: white;
 }
@@ -147,12 +184,25 @@ button, .registerButton, .exitButton{
     font-size: 0.8em;
     font-weight: bold;
 }
+.inscriptionButton{
+    width: 80%;
+    height: 50%;
+    border-radius: 0.5em;
+    border: none;
+    font-size: 1.2em;
+    position: relative;
+
+}
 
 .connectButton{
     width: 100%;
     height: 100%;
+}
+.connectButton, .inscriptionButton{
     background: #ffae9e;
     color: white;
+    transition: 0.5s;
+    font-weight: bold;
 }
 
 .exitButton{
@@ -179,7 +229,7 @@ footer{
 }*/
 
 
-.contain input{
+.contain input, .box-inscription input:not(.inscriptionButton){
     width: 100%;
     height: 100%;
     padding: 10px;
@@ -211,7 +261,8 @@ footer{
     color: white;
 }
 
-.connectFooter, #echelleFooter, #signFooter, #logo{
+.connectFooter, #logo{
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -220,7 +271,7 @@ footer{
 
     box-shadow: 0em 0 0.4em 0 rgba(15, 22, 33, 0.6);
 }
-.connectFooter, #echelleFooter, #signFooter{
+.connectFooter{
     height: 40px;
     background-color: #fff;
 }
@@ -247,26 +298,11 @@ footer{
     flex-direction: row;
     color: rgba(15, 22, 33, 0.6);
 }
-#signFooter, .connectFooter{
+.connectFooter{
     bottom: 25px;
     width: 10%;
 }
 
-
-
-
-#echelleFooter{
-    width: 5%;
-    bottom: 70px;
-}
-
-
-#echelleFooter, #signFooter{
-    right: 20px;
-}
-#echelleFooter .icons{
-    margin-top: 5px;
-}
 
 
 
