--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -13,6 +13,11 @@
 
 body {
     height: 100%;
+    width: 50%;
+    z-index: -2;
+    max-width: 300px;
+
+
 }
 
 #mapContainer{
@@ -38,7 +43,9 @@ body {
 
 .contain{
     background: #efeeee;
-    width: 25%;
+    width: 100%;
+    max-width: 300px;
+    min-width: 200px;
     height: 100%;
     position: relative;
     top: 25px;
@@ -307,7 +314,7 @@ footer{
 }
 .connectFooter{
     bottom: 25px;
-    width: 10%;
+    width: 200px;
 }
 
 
