--- a/ressources/css/main.css
+++ b/ressources/css/main.css
@@ -135,7 +135,7 @@ body {
     margin-bottom: 3px;
 }
 
-button, .registerButton, .exitButton{
+button, .registerButton, .exitButton, .connectButton{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -207,7 +207,7 @@ button, .registerButton, .exitButton{
 
 .connectButton{
     width: 100%;
-    height: 100%;
+    height: 30px;
 }
 .connectButton, .inscriptionButton{
     background: #ffae9e;
@@ -291,7 +291,7 @@ footer{
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100%;
+    height: 30px;
 }
 .connectHeader{
     padding: 0 10%;
@@ -381,13 +381,22 @@ footer{
 
 
 .formConnect{
-    height: 220px;
+    height: 180px;
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     background: #efeeee;
     padding: 15px;
+    gap: 10%;
+}
+
+.formConnect form{
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     gap: 10%;
 }
 
