--- a/web/ressources/css/main.css
+++ b/web/ressources/css/main.css
@@ -77,6 +77,8 @@ body {
 
 }
 
+
+
 .icons{
     width: 15px;
     height: 15px;
@@ -117,19 +119,64 @@ body {
     border-radius: 5px;
 }
 
-.box-inscription{
+.box-inscription, .box-liste{
     display: flex;
     width: 30%;
     height: 85%;
-    padding: 20px 30px;
     z-index: 1;
     position: relative;
-    align-items: center;
     flex-direction: column;
     box-shadow: 0em 0 0.4em 0 rgba(15, 22, 33, 0.6);
     border-radius: 0.5em;
     background: #efeeee;
 }
+
+.box-inscription{
+    width: 30%;
+    padding: 20px 30px;
+    align-items: center;
+
+
+}
+
+.box-liste .exitLine > .exitButton{
+    width: 5%;
+}
+
+.box-liste > h1{
+
+    font-size: 2em;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    color: #ffae9e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5em;
+    background: white;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.1);
+    font-family: Poppins, serif;
+}
+
+.box-liste{
+    overflow-y: scroll;
+    width: 60%;
+}
+
+.box-liste{
+    padding: 20px;
+}
+
+.box-liste > li{
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    font-size: 0.8em;
+}
+
 
 .box-inscription > label{
     display: flex;
