--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -71,7 +71,7 @@
         {% for type in ['success', 'info', 'warning', 'danger'] %}
             {% for messageFlash in messagesFlash[type] %}
                 <div class="notification-hidden" id="notif">
-                    <div class="messageFlash alert-{{ type }}">
+                    <div class="messageFlash">
                         <h3>Message d'Explorateur</h3>
                         <div class="ligne"></div>
                         <p>{{ messageFlash }}</p>
