--- a/web/ressources/css/main.css
+++ b/web/ressources/css/main.css
@@ -157,9 +157,12 @@ body {
     width: 30%;
     padding: 20px 30px;
     align-items: center;
-
-
 }
+
+.inputForm{
+    min-height: 30px;
+}
+
 
 .box-liste .exitLine > .exitButton{
     width: 5%;
@@ -202,7 +205,7 @@ body {
 .box-inscription > label{
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 30%;
     align-items: flex-start;
     flex-direction: column;
     margin-bottom: 20px;
@@ -314,6 +317,7 @@ button, .registerButton, .exitButton, .connectButton{
 .inscriptionButton{
     width: 80%;
     height: 60%;
+    max-height: 50px;
     border-radius: 0.5em;
     border: none;
     position: relative;
