--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -74,14 +74,14 @@
         {% for type in ['success', 'info', 'warning', 'danger'] %}
             {% for messageFlash in messagesFlash[type] %}
                 <div class="notification-hidden" id="notif">
-                    <div class="messageFlash">
+                    <div class="messageFlash alert-{{ type }}">
                         <div class="separate">
-                            <h3>Message d'Explorateur</h3>
+                            <h3>Message de ton ami Explorateur</h3>
                             <img id="icon-exit-notif" src="{{ asset("ressources/img/icons/xmark-solid-white.svg") }}">
                         </div>
                         <div class="ligne"></div>
                         <div class="separate">
-
+                            <img id="imgnotif" src="{{ asset("ressources/img/icons/" ~ type ~ "-solid.svg") }}">
                             <p>{{ messageFlash }}</p>
                         </div>
 
