--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+<p>{{ 'Base.html.twig'}}</p>
     <div id="mapContainer"></div>
 
     <div id="logo">
@@ -34,20 +35,22 @@
         </ul>
     {% elseif idUtilisateurConnecte and adminConnecte %}
         <ul id="sousmenu" class="sousmenu-hidden">
+            {#
             <li>
                 <a href="{{ route("historique") }}">
                 <img src="{{ asset("ressources/img/icons/clock-solid.svg") }}" class="icons">
                 <h3>Historique</h3> 
             </li>
+            #}
             <li>
             <a href="{{ route("noeudscommune") }}">
             <img src="{{ asset("ressources/img/icons/compass-solid.svg") }}" class="icons">
-            <h3>Communes</h3> 
+            <h3>Communes</h3> </a>
             </li>
             <li>
             <a href="{{ route("afficherListe") }}">
             <img src="{{ asset("ressources/img/icons/user-solid.svg") }}" class="icons">
-            <h3>Utilisateurs</h3> 
+            <h3>Utilisateurs</h3> </a>
             </li>
         </ul>
           {% elseif idUtilisateurConnecte %}
