--- a/web/ressources/css/main.css
+++ b/web/ressources/css/main.css
@@ -39,8 +39,7 @@ body {
 .sousmenu-hidden{
     opacity: 0;
     border-radius: 0.5em;
-
-
+    display: none !important;
 }
 .sousmenu-show{
     opacity: 1;
@@ -103,7 +102,7 @@ body {
 }
 
 
-#crossIcon.iconsLocationStart{
+.crossIcon.iconsLocationStart{
     width: 17px;
     height: 17px;
     margin-bottom: 4px;
@@ -111,7 +110,7 @@ body {
     position: relative;
 }
 
-#crossIcon.iconsLocation{
+.crossIcon.iconsLocation{
     width: 22px;
     height: 22px;
     margin-bottom: 4px;
@@ -152,18 +151,26 @@ body {
     border-radius: 5px;
 }
 
+label{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 #inputNonce{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#renvoyerCode{
+#renvoyerCode,
+.lienProfil{
     color: black;
     transition: 0.1s linear;
 }
 
-#renvoyerCode:hover{
+#renvoyerCode:hover,
+.lienProfil:hover{
     color: #ffae9e;
 }
 
@@ -176,7 +183,7 @@ body {
 .box-inscription, .box-liste{
     display: flex;
     width: 30%;
-    height: 50%;
+
     padding: 20px 30px;
     z-index: 1;
     position: relative;
@@ -245,6 +252,11 @@ body {
     margin-bottom: 20px;
     gap: 10px;
     position: relative;
+}
+
+#changerPP{
+    text-align: center;
+    font-size: 10px;
 }
 
 
@@ -624,6 +636,7 @@ footer{
 .formConnect{
     height: 180px;
     width: 25%;
+    max-width: 350px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
